manifests/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dito-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: dito-api
